# tp2-metodos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
notebooks/: Copia_de_Aprendizaje_Automático,_KNN,_validación_cruzada.ipynb  bests_k_p_15_50.npy  experimentacion.ipynb  main.ipynb  tp2.ipynb  transformacion_50.npy
src/: eigen.cpp  eigen.h  main.cpp  main_pybind.cpp  metnum.cpp  pca.cpp  pca.h  run_test.sh  test.cpp
